TESTS = test_service test_xaction
check_PROGRAMS = test_service test_xaction
test_service_SOURCES = test_service.cc
test_service_CFLAGS = @CHECK_CFLAGS@ -lecap-stream
test_service_LDADD = @CHECK_LIBS@
test_xaction_SOURCES = test_xaction.cc
test_xaction_CFLAGS = @CHECK_CFLAGS@ -lecap-stream
test_xaction_LDADD = @CHECK_LIBS@
